--- a/abc_comprehensivecba_slides.tex
+++ b/abc_comprehensivecba_slides.tex
@@ -806,7 +806,7 @@ We estimate the treatment effects on $\hat{Y}$
 \begin{center}
 \begin{table}
 	\caption{Benefit-Cost Ratio and Rate of Return} \label{tab:bcr_irr1}
-	\scalebox{.45}{\input{output/sensitivity.tex}}
+	\scalebox{.45}{\input{output/sensitivityforslides.tex}}
 \end{table}
 \end{center}
 \end{frame}
