place in other folder

--- a/AppResOutput/1_abccare.tex
+++ b/AppResOutput/1_abccare.tex
@@ -2,7 +2,7 @@
 
 \setlength\tabcolsep{0.3em}
 
-\section{{Combining Functions, Aggregated}}
+\subsection{{Combining Functions, Aggregated}}
 
 
 	\begin{table}[H]
@@ -24,7 +24,7 @@
 	\end{table}  
 \clearpage
 
-\section{{Combining Functions, by Category}}
+\subsection{{Combining Functions, by Category}}
 
 
 	\begin{table}[H]
@@ -64,7 +64,7 @@
 	\end{table}   
 \clearpage
 
-\section{Treatment Effects for Pooled Sample}
+\subsection{Treatment Effects for Pooled Sample}
 
 
 	\begin{table}[H]
@@ -168,7 +168,8 @@
      \label{table:abccare_rslt_pooled_cat16}
 	\input{AppResOutput/abccare/rslt_pooled_cat16}
 	\end{table} 
-\section{Treatment Effects for Male Sample}
+
+\subsection{Treatment Effects for Male Sample}
 
 
 	\begin{table}[H]
@@ -272,7 +273,7 @@
      \label{table:abccare_rslt_male_cat16}
 	\input{AppResOutput/abccare/rslt_male_cat16}
 	\end{table} 
-\section{Treatment Effects for Female Sample}
+\subsection{Treatment Effects for Female Sample}
 
 
 	\begin{table}[H]
@@ -378,7 +379,7 @@
 	\end{table} 
 \clearpage
 
-\section{Treatment Effects for Pooled Sample, Step Down}
+\subsection{Treatment Effects for Pooled Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -482,7 +483,8 @@
      \label{table:abccare_rslt_pooled_cat16_sd}
 	\input{AppResOutput/abccare/rslt_pooled_cat16_sd}
 	\end{table} 
-\section{Treatment Effects for Male Sample, Step Down}
+
+\subsection{Treatment Effects for Male Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -586,7 +588,8 @@
      \label{table:abccare_rslt_male_cat16_sd}
 	\input{AppResOutput/abccare/rslt_male_cat16_sd}
 	\end{table} 
-\section{Treatment Effects for Female Sample, Step Down}
+
+\subsection{Treatment Effects for Female Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -691,4 +694,3 @@
 	\input{AppResOutput/abccare/rslt_female_cat16_sd}
 	\end{table} 
 \clearpage
-
