--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -24,7 +24,7 @@
 	\input{AppResOutput/abccare/rslt_female_counts_all}
 	\end{table}  
 
-\section{{Outcomes by Category}} \label{appendix:morebycat}
+\subsection{{Outcomes by Category}} \label{appendix:morebycat}
 
 
 	\begin{sidewaystable}[H]
