major revision of health appendix including: updates to reflect recent changes to FAM since last revision, updated description of new BMI imputation strategy, added description of FAM bootstrap methods, added description of pre-30 health cost estimation

--- a/AppOutput/Methodology/transitiontable.tex
+++ b/AppOutput/Methodology/transitiontable.tex
@@ -11,9 +11,9 @@ Cancer         & & & $\times$ &  & &   &$\times$ & $\times$&           &        
 Disability     & & & & & & &$\times$ &$\times$ &         &      &     $\times$  & $\times$ & $\times$   & $\times$\\
 \midrule
 Smoking & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\times$ &$\times$ & $\times$   &   &     $\times$  & $\times$ & $\times$   & $\times$\\
-BMI & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\times$ &$\times$ & $\times$    &  $\times$ &     & $\times$ & $\times$   & $\times$\\
-Physical Activ. & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\times$ &$\times$ & $\times$    &   &     & $\times$ & $\times$   & $\times$\\
-Binge Drinking & & & & & & &  &$\times$ & $\times$    &      &      & $\times$ & $\times$   & $\times$\\
+BMI & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\times$ & & $\times$    &  $\times$ &     &  &   & \\
+Physical Activ. & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\times$ & & $\times$    &   &     &   &  & \\
+Binge Drinking & & & & & & &  &$\times$ & $\times$    &      &      &   &     &  \\
 \midrule
 DI Claim      & & & & &  & & & &             &         & $\times$    & $\times$   & $\times$ & $\times$\\
 SS Claim     & & & & & & & &           &         &     & $\times$ &  & $\times$& $\times$\\
