--- a/heckman.bib
+++ b/heckman.bib
@@ -54568,6 +54568,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2015.12.07}
 }
 
+@InCollection{McCarthy-Snowden_1985_Bootstrap,
+ Title                     = {The Bootstrap and Finite Population Sampling},
+ Author                    = {McCarthy, P.J., and Snowden, C.B.},
+  Booktitle                = {Vital and Health Statistics},
+  Publisher                = {U.S. Government Printing Office},
+  Year                     = {1985},
+
+  Address                  = {Washington, DC},
+  Pages                    = {2--95}
+}
+  
 @Article{McCarton_Brooks-Gunn_ea_1997_age8,
   Title                    = {Age 8 Years of Early Intervention for Low-Birth-Weight Premature Infants: The Infant Health and Development Program},
   Author                   = {McCarton, Celia M. and Brooks-Gunn, Jeanne and Wallace, Ina F. and Bauer, Charles and Bennett, Forrest C. and Bernbaum, Judy C. and Broyles, R. Sue and Casey, Patrick H. and McCormick, Marie C. and Scott, David T. and Tyson, Jon and Tonascia, James and Meinert, Curtis L.},
