--- a/Appendices/Health/data.tex
+++ b/Appendices/Health/data.tex
@@ -1,9 +1,10 @@
 \subsection{Data Sources} \label{section:data}
 \noindent FAM uses data from ABC and CARE follow-up surveys to build the initial state of the cohort. 
 The transition model parameters are estimated from the 1997 to 2013 waves of the Panel Study of Income Dynamics (PSID). 
-We supplement the PSID with data from the Health and Retirement Study (HRS). 
+We supplement the PSID with data from the Health and Retirement Study (HRS). We use the National Health and Nutrition Examination Survey (NHANES) 
+to account for differences between measured and self-reported BMI.
 To estimate medical care costs associated with health conditions, we use the Medical Expenditures Panel Survey (MEPS) and the Medicare Current Beneficiaries Survey (MCBS). \\
-% \todo cite all sources
+
 
 \subsubsection{PSID}
 \label{section:data_psid}
@@ -15,7 +16,7 @@ To estimate medical care costs associated with health conditions, we use the Med
 as single heads of households, cohabiting partners, or married partners.  These heads, wives, and husbands respond to the richest
 set of PSID questions, including the health questions that are critical for our purposes. We use all respondents aged 25 and older.\footnote{While we use the full sample, we explored using a few different subsamples to better adapt to the demographics of the ABC and CARE subjects.}  
 The length of the PSID is a significant advantage, because we can include past health behaviors as explanatory variables for current health outcomes. This dataset provides adequate sample sizes to explore health outcomes of specific groups. 
-PSID does not follow individuals who are institutionalized in nursing homes or other long-term care facilities. To overcome this weakness, we pool the PSID sample with the Health and Retirement Study (HRS) sample when
+PSID does not follow individuals who are institutionalized in nursing homes or other long-term care facilities. To overcome this weakness, we pool the PSID sample with the HRS sample when
 estimating mortality models. \\
 
 \subsubsection{HRS}
@@ -24,8 +25,8 @@ estimating mortality models. \\
 where at least one member is at least 51 years old.
 This study collects in-depth information about income, work, health, and medical expenditures. In our model, waves from 1998 to 2012 are pooled with the PSID for estimation of mortality and 
 widowhood models. The HRS data
-are harmonized to the PSID for all relevant variables. We use the dataset created by RAND (RAND HRS, version N) as our basis 
-for the analysis. We use all cohorts in the analysis. \\
+are harmonized to the PSID for all relevant variables. Because PSID does not follow respondents into nursing homes, we also use the HRS to estimate the model for nursing home residency.  We use all cohorts in the dataset created by RAND (RAND HRS, version O) as the basis 
+for our analysis. \\
 
 \subsubsection{MCBS}
 \noindent The Medicare Current Beneficiary Survey (MCBS) is a nationally representative sample of aged, disabled, 
@@ -54,12 +55,16 @@ services, sources of medical payments, and body weight and height. Each year the
 includes approximately 12,000 households, or 34,000 individuals. Sample size for those aged 25-64 is 
 about 15,800 in each year.  MEPS has comparable measures of socioeconomic status as those in PSID, 
 including age, race and ethnicity, educational attainment, census region, and marital status.  We estimate medical expenditure 
-and utilization using data from 2007 to 2010. We use waves from 2001 to 2003 to estimate models of quality-adjusted life years (QALYs), due to availability of EQ-5D instrument in these waves.\footnote{Section \ref{section:FAM_models} explains the estimation of the QALY model.} \\
+and utilization using data from 2008 to 2010. We use waves from 2001 to 2003 to estimate models of quality-adjusted life years (QALYs), due to availability of EQ-5D instrument in these waves.\footnote{Section \ref{section:FAM_models} explains the estimation of the QALY model.} \\
 
+
+\subsubsection{NHANES}
+\noindent 
+The National Health and Nutrition Examination Survey (NHANES) targets a nationally representative sample of approximately 5,000 individuals in each year since 1999.  The data collected includes responses to interview questions about demographics, disease conditions, height, and weight, as well as physical measurement of BMI.  We use NHANES years 2002 to 2010 to estimate a model for imputing measured BMI from self-reported BMI.  The methodology is described in Section \ref{section:FAM_ABC_impute}.
 
 \subsubsection{ABC and CARE}
 \noindent FAM uses ABC and CARE data to initialize the state of each ABC or CARE subject when they enter into the simulation.  
 These data are taken from the the age-21 parent interview; age-30 subject interview; age-30 tobacco, alcohol, and drugs interview; and age-34 health interview.  
-The goal is to have each subject's initial state match their status at the age-30 subject interview. Because several key FAM inputs are not available at the age-30 interview, we use surveys corresponding to other ages to impute missing elements. These imputations are discussed in Section \ref{section:FAM_ABC_impute}. \\
+The goal is to have each subject's initial state match their status at the age-30 subject interview. Because several key FAM inputs are not available at the age-30 interview, we use PSID or ABC and CARE surveys corresponding to other ages to impute missing elements. These imputations are discussed in Section \ref{section:FAM_ABC_impute}. \\
 
 % \todo we could add a table of all the FAM input variables (rows) and three columns, as-is, rule imputed, model imputed, with checkmarks to indicate how the data were derived
