Maria's update to results section

--- a/Appendices/Health/results.tex
+++ b/Appendices/Health/results.tex
@@ -2,7 +2,7 @@
 
 \noindent If the treatment affects health outcomes, it does so by impacting the incidence rate of health conditions. For an individual, health conditions in turn impact their medical costs and quality of life. It is worth noting that lifetime medical costs depend on the severity of health events, however, they also depend on length of life in two ways: individuals who live longer accumulate medical costs over more years and medical costs increase with age. Because of this, it is important to quantify the benefits of an extra year of life that is healthy. Therefore, we look at the treatment effects on both medical costs and QALYs. \\
 
-\noindent The projections for health outcomes of treatment and control groups differ in the prevalence of several chronic conditions. Table~\ref{table:prevalence65} shows the prevalence of six chronic conditions by age 65 for the treatment and control groups in the microsimulation exercise. Because incidence of disease, and therefore prevalence, depends not only on age but also on gender, Table~\ref{table:prevalence65} also splits the treatment effect by gender. Heart disease and stroke have the largest difference by treatment group, for both males and females. There is lower predicted prevalence of hypertension for treated males compared to control males. Lung disease shows a larger difference by treatment status for males than for females, and prevalence of diabetes is smaller amongst the treatment group for both genders when compared to the control group.\footnote{There are also differences in government transfer program participation rates. For example, 14\% of males in the treatment group are expected to claim disability insurance by age 60, while the males in the control group are expected to have a higher claiming rate of 25\%. The treatment effect for females at age 60 is much lower, showing only a 4\% difference.} \\
+\noindent The projections for health outcomes of treatment and control groups differ in the prevalence of several chronic conditions. Table~\ref{table:prevalence65} shows the prevalence of six chronic conditions by age 65 for the treatment and control groups in the microsimulation exercise, without controlling for attrition in the sample. Because incidence of disease, and therefore prevalence, depends not only on age but also on gender, Table~\ref{table:prevalence65} also splits the treatment effect by gender. There is lower predicted prevalence of stroke for treated males compared to control males. Lung disease shows a larger difference by treatment status for males than for females.\footnote{There are also differences in government transfer program participation rates. For example, 14\% of males in the treatment group are expected to claim disability insurance by age 60, while the males in the control group are expected to have a higher claiming rate of 25\%. The treatment effect for females at age 60 is much lower, showing only a 4\% difference.} \\
 %In future work, we will monetize the treatment effect in program participation as well.
 
 \begin{table}[H]
