--- a/AppOutput/Health/health_at_6566_table.tex
+++ b/AppOutput/Health/health_at_6566_table.tex
@@ -1,12 +1,9 @@
-\begin{tabular}{ccccccc}
-\toprule
-Condition && \multicolumn{2}{c}{Male} &  & \multicolumn{2}{c}{Female}\\
-& & Control & Treated & & Control & Treated \\ \midrule
-Cancer&&0.14&0.15&&0.19&0.15\\
-Diabetes&&0.50&0.47&&0.48&0.46\\
-Heart disease&&0.46&0.37&&0.45&0.41\\
-Hypertension&&0.89&0.85&&0.94&0.94\\
-Lung disease&&0.26&0.22&&0.30&0.28\\
-Stroke&&0.26&0.19&&0.20&0.17\\
-\bottomrule
-\end{tabular}
+\begin{tabular}{lcccc} \toprule
+ & \multicolumn{2}{c}{Female} & \multicolumn{2}{c}{Female} \\
+ & Control  & Treatment  & Control  & Treatment  \\  \midrule 
+Cancer              &     0.198 &     0.131 &     0.000 &     0.036 \\  
+Diabetes           &     0.319 &     0.298 &     0.129 &     0.366 \\  
+Heart Diseases  &     0.158 &     0.211 &     0.110 &     0.105 \\  
+Hypertension    &     0.816 &     0.813 &     0.484 &     0.631 \\  
+Lunge Disease  &     0.172 &     0.228 &     0.187 &     0.095 \\  
+Stroke Disease &     0.098 &     0.062 &     0.071 &     0.036 \\  \toprule \end{tabular}
